FlexBison/sintatic.output
Terminals unused in grammar

    DEF
    EYESHADOW_IDENTIFIER
    IDENTIFIER


Grammar

    0 $accept: program $end

    1 program: MAKEUP statements FINAL_LOOK

    2 statements: statement
    3           | statements statement

    4 statement: foundation_statement
    5          | blush_statement
    6          | eyeshadow_statement
    7          | eyeliner_statement
    8          | mascara_statement
    9          | lipstick_statement
   10          | lipgloss_statement
   11          | lipbalm_statement
   12          | if_statement
   13          | repeat_statement

   14 foundation_statement: FOUNDATION COLON FOUDANTION_IDENTIFIER

   15 blush_statement: BLUSH COLON BLUSH_IDENTIFIER

   16 eyeshadow_statement: EYESHADOW COLON COLOR_IDENTIFIER

   17 eyeliner_statement: EYELINER COLON EYELINER_IDENTIFIER

   18 mascara_statement: MASCARA COLON MASCARA_IDENTIFIER

   19 lipstick_statement: LIPSTICK COLON LIPSTICK_IDENTIFIER

   20 lipgloss_statement: LIPGLOSS COLON LIPGLOSS_IDENTIFIER

   21 lipbalm_statement: LIPBALM COLON LIPBALM_IDENTIFIER

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY

   23 repeat_statement: REPEAT DIGIT TIMES LKEY statements RKEY


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    MAKEUP (258) 1
    FINAL_LOOK (259) 1
    REPEAT (260) 23
    TIMES (261) 23
    IF (262) 22
    IN (263) 22
    THEN (264) 22
    ELSE (265) 22
    DEF (266)
    FOUNDATION (267) 14
    BLUSH (268) 15 22
    EYESHADOW (269) 16
    EYELINER (270) 17
    MASCARA (271) 18
    LIPSTICK (272) 19
    LIPGLOSS (273) 20
    LIPBALM (274) 21
    COLOR_IDENTIFIER (275) 16
    FOUDANTION_IDENTIFIER (276) 14
    BLUSH_IDENTIFIER (277) 15 22
    EYESHADOW_IDENTIFIER (278)
    LIPSTICK_IDENTIFIER (279) 19
    LIPGLOSS_IDENTIFIER (280) 20
    LIPBALM_IDENTIFIER (281) 21
    MASCARA_IDENTIFIER (282) 18
    EYELINER_IDENTIFIER (283) 17
    DIGIT (284) 23
    IDENTIFIER (285)
    LKEY (286) 22 23
    RKEY (287) 22 23
    COLON (288) 14 15 16 17 18 19 20 21


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    program (35)
        on left: 1
        on right: 0
    statements (36)
        on left: 2 3
        on right: 1 3 22 23
    statement (37)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 3
    foundation_statement (38)
        on left: 14
        on right: 4
    blush_statement (39)
        on left: 15
        on right: 5
    eyeshadow_statement (40)
        on left: 16
        on right: 6
    eyeliner_statement (41)
        on left: 17
        on right: 7
    mascara_statement (42)
        on left: 18
        on right: 8
    lipstick_statement (43)
        on left: 19
        on right: 9
    lipgloss_statement (44)
        on left: 20
        on right: 10
    lipbalm_statement (45)
        on left: 21
        on right: 11
    if_statement (46)
        on left: 22
        on right: 12
    repeat_statement (47)
        on left: 23
        on right: 13


State 0

    0 $accept: • program $end

    MAKEUP  shift, and go to state 1

    program  go to state 2


State 1

    1 program: MAKEUP • statements FINAL_LOOK

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 13
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 2

    0 $accept: program • $end

    $end  shift, and go to state 25


State 3

   23 repeat_statement: REPEAT • DIGIT TIMES LKEY statements RKEY

    DIGIT  shift, and go to state 26


State 4

   22 if_statement: IF • BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY

    BLUSH_IDENTIFIER  shift, and go to state 27


State 5

   14 foundation_statement: FOUNDATION • COLON FOUDANTION_IDENTIFIER

    COLON  shift, and go to state 28


State 6

   15 blush_statement: BLUSH • COLON BLUSH_IDENTIFIER

    COLON  shift, and go to state 29


State 7

   16 eyeshadow_statement: EYESHADOW • COLON COLOR_IDENTIFIER

    COLON  shift, and go to state 30


State 8

   17 eyeliner_statement: EYELINER • COLON EYELINER_IDENTIFIER

    COLON  shift, and go to state 31


State 9

   18 mascara_statement: MASCARA • COLON MASCARA_IDENTIFIER

    COLON  shift, and go to state 32


State 10

   19 lipstick_statement: LIPSTICK • COLON LIPSTICK_IDENTIFIER

    COLON  shift, and go to state 33


State 11

   20 lipgloss_statement: LIPGLOSS • COLON LIPGLOSS_IDENTIFIER

    COLON  shift, and go to state 34


State 12

   21 lipbalm_statement: LIPBALM • COLON LIPBALM_IDENTIFIER

    COLON  shift, and go to state 35


State 13

    1 program: MAKEUP statements • FINAL_LOOK
    3 statements: statements • statement

    FINAL_LOOK  shift, and go to state 36
    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statement             go to state 37
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 14

    2 statements: statement •

    $default  reduce using rule 2 (statements)


State 15

    4 statement: foundation_statement •

    $default  reduce using rule 4 (statement)


State 16

    5 statement: blush_statement •

    $default  reduce using rule 5 (statement)


State 17

    6 statement: eyeshadow_statement •

    $default  reduce using rule 6 (statement)


State 18

    7 statement: eyeliner_statement •

    $default  reduce using rule 7 (statement)


State 19

    8 statement: mascara_statement •

    $default  reduce using rule 8 (statement)


State 20

    9 statement: lipstick_statement •

    $default  reduce using rule 9 (statement)


State 21

   10 statement: lipgloss_statement •

    $default  reduce using rule 10 (statement)


State 22

   11 statement: lipbalm_statement •

    $default  reduce using rule 11 (statement)


State 23

   12 statement: if_statement •

    $default  reduce using rule 12 (statement)


State 24

   13 statement: repeat_statement •

    $default  reduce using rule 13 (statement)


State 25

    0 $accept: program $end •

    $default  accept


State 26

   23 repeat_statement: REPEAT DIGIT • TIMES LKEY statements RKEY

    TIMES  shift, and go to state 38


State 27

   22 if_statement: IF BLUSH_IDENTIFIER • IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY

    IN  shift, and go to state 39


State 28

   14 foundation_statement: FOUNDATION COLON • FOUDANTION_IDENTIFIER

    FOUDANTION_IDENTIFIER  shift, and go to state 40


State 29

   15 blush_statement: BLUSH COLON • BLUSH_IDENTIFIER

    BLUSH_IDENTIFIER  shift, and go to state 41


State 30

   16 eyeshadow_statement: EYESHADOW COLON • COLOR_IDENTIFIER

    COLOR_IDENTIFIER  shift, and go to state 42


State 31

   17 eyeliner_statement: EYELINER COLON • EYELINER_IDENTIFIER

    EYELINER_IDENTIFIER  shift, and go to state 43


State 32

   18 mascara_statement: MASCARA COLON • MASCARA_IDENTIFIER

    MASCARA_IDENTIFIER  shift, and go to state 44


State 33

   19 lipstick_statement: LIPSTICK COLON • LIPSTICK_IDENTIFIER

    LIPSTICK_IDENTIFIER  shift, and go to state 45


State 34

   20 lipgloss_statement: LIPGLOSS COLON • LIPGLOSS_IDENTIFIER

    LIPGLOSS_IDENTIFIER  shift, and go to state 46


State 35

   21 lipbalm_statement: LIPBALM COLON • LIPBALM_IDENTIFIER

    LIPBALM_IDENTIFIER  shift, and go to state 47


State 36

    1 program: MAKEUP statements FINAL_LOOK •

    $default  reduce using rule 1 (program)


State 37

    3 statements: statements statement •

    $default  reduce using rule 3 (statements)


State 38

   23 repeat_statement: REPEAT DIGIT TIMES • LKEY statements RKEY

    LKEY  shift, and go to state 48


State 39

   22 if_statement: IF BLUSH_IDENTIFIER IN • BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY

    BLUSH  shift, and go to state 49


State 40

   14 foundation_statement: FOUNDATION COLON FOUDANTION_IDENTIFIER •

    $default  reduce using rule 14 (foundation_statement)


State 41

   15 blush_statement: BLUSH COLON BLUSH_IDENTIFIER •

    $default  reduce using rule 15 (blush_statement)


State 42

   16 eyeshadow_statement: EYESHADOW COLON COLOR_IDENTIFIER •

    $default  reduce using rule 16 (eyeshadow_statement)


State 43

   17 eyeliner_statement: EYELINER COLON EYELINER_IDENTIFIER •

    $default  reduce using rule 17 (eyeliner_statement)


State 44

   18 mascara_statement: MASCARA COLON MASCARA_IDENTIFIER •

    $default  reduce using rule 18 (mascara_statement)


State 45

   19 lipstick_statement: LIPSTICK COLON LIPSTICK_IDENTIFIER •

    $default  reduce using rule 19 (lipstick_statement)


State 46

   20 lipgloss_statement: LIPGLOSS COLON LIPGLOSS_IDENTIFIER •

    $default  reduce using rule 20 (lipgloss_statement)


State 47

   21 lipbalm_statement: LIPBALM COLON LIPBALM_IDENTIFIER •

    $default  reduce using rule 21 (lipbalm_statement)


State 48

   23 repeat_statement: REPEAT DIGIT TIMES LKEY • statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 50
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 49

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH • THEN LKEY statements RKEY ELSE LKEY statements RKEY

    THEN  shift, and go to state 51


State 50

    3 statements: statements • statement
   23 repeat_statement: REPEAT DIGIT TIMES LKEY statements • RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 52

    statement             go to state 37
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 51

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN • LKEY statements RKEY ELSE LKEY statements RKEY

    LKEY  shift, and go to state 53


State 52

   23 repeat_statement: REPEAT DIGIT TIMES LKEY statements RKEY •

    $default  reduce using rule 23 (repeat_statement)


State 53

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY • statements RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 54
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 54

    3 statements: statements • statement
   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements • RKEY ELSE LKEY statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 55

    statement             go to state 37
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 55

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY • ELSE LKEY statements RKEY

    ELSE  shift, and go to state 56


State 56

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE • LKEY statements RKEY

    LKEY  shift, and go to state 57


State 57

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE LKEY • statements RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12

    statements            go to state 58
    statement             go to state 14
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 58

    3 statements: statements • statement
   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements • RKEY

    REPEAT      shift, and go to state 3
    IF          shift, and go to state 4
    FOUNDATION  shift, and go to state 5
    BLUSH       shift, and go to state 6
    EYESHADOW   shift, and go to state 7
    EYELINER    shift, and go to state 8
    MASCARA     shift, and go to state 9
    LIPSTICK    shift, and go to state 10
    LIPGLOSS    shift, and go to state 11
    LIPBALM     shift, and go to state 12
    RKEY        shift, and go to state 59

    statement             go to state 37
    foundation_statement  go to state 15
    blush_statement       go to state 16
    eyeshadow_statement   go to state 17
    eyeliner_statement    go to state 18
    mascara_statement     go to state 19
    lipstick_statement    go to state 20
    lipgloss_statement    go to state 21
    lipbalm_statement     go to state 22
    if_statement          go to state 23
    repeat_statement      go to state 24


State 59

   22 if_statement: IF BLUSH_IDENTIFIER IN BLUSH THEN LKEY statements RKEY ELSE LKEY statements RKEY •

    $default  reduce using rule 22 (if_statement)
